# llama.cpp

./: .gitignore
examples/: CMakeLists.txt
examples/alex-mlp/: CMakeLists.txt  README.md  convert.py  main-ctx.cpp  mlp.h  model.py
examples/alex-simple-lm/: CMakeLists.txt  README.md  simple.cpp
examples/simple/: CMakeLists.txt  simple-ctx.cpp  simple-ctx.h
